--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-code",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "e <126ying@sina.cn>",
+  "author": "Yingjh <126ying@sina.cn>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -14,8 +14,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element": "^0.1.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-content-loader": "^0.2.1",
+    "vue-i18n": "^8.2.1",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -63,6 +67,7 @@
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
@@ -71,6 +76,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.1.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
