--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "babel-polyfill": "^6.26.0",
+    "better-scroll": "^1.13.2",
+    "debug": "^4.1.0",
     "element": "^0.1.4",
+    "hoek": "^5.0.4",
+    "lodash": "^4.17.11",
+    "pug": "^2.0.3",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-content-loader": "^0.2.1",
     "vue-i18n": "^8.2.1",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
