--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "amfe-flexible": "^2.2.1",
     "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.13.2",
     "debug": "^4.1.0",
     "element": "^0.1.4",
     "font-awesome": "^4.7.0",
     "hoek": "^5.0.4",
+    "lib-flexible": "^0.3.2",
     "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
     "pug": "^2.0.3",
@@ -85,6 +85,7 @@
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.1.6",
+    "postcss-px2rem": "^0.3.0",
     "postcss-url": "^7.2.1",
     "px2rem-loader": "^0.1.9",
     "rimraf": "^2.6.0",
