--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "normalize.css": "^8.0.1",
     "pug": "^2.0.3",
     "px2rem-loader": "^0.1.9",
+    "sass-resources-loader": "^2.0.0",
+    "style-loader": "^0.23.1",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-content-loader": "^0.2.1",
@@ -51,7 +53,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
