--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hoek": "^5.0.4",
     "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
+    "postcss-px-to-viewport": "^1.1.0",
     "pug": "^2.0.3",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
